# ferrosonic

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  development.yml
packaging/debian/: ferrosonic.desktop
packaging/windows/: install.bat
src/: main.rs
src/app/: actions.rs  cava.rs  equalizer.rs  input.rs  input_artists.rs  input_equalizer.rs  input_playlists.rs  input_queue.rs  input_radio.rs  input_settings.rs  mod.rs  mouse.rs  playback.rs  state.rs
src/audio/: ffmpeg.rs  mod.rs  mpv.rs
src/config/: equalizer.rs  mod.rs  paths.rs
src/mpris/: mod.rs
src/subsonic/: auth.rs  client.rs  models.rs
src/ui/: footer.rs  header.rs  layout.rs  mod.rs  theme.rs  theme_builtins.rs
src/ui/pages/: artists.rs  equalizer.rs  mod.rs  queue.rs  radio.rs  settings.rs
src/ui/widgets/: now_playing.rs
