[package]
name = "ferrosonic"
version = "0.2.4"
edition = "2021"
description = "A terminal-based Subsonic music client with bit-perfect audio playback"
license = "MIT"
authors = ["ferrosonic contributors"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "process", "signal"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"
tui-tree-widget = "0.22"

# HTTP client for Subsonic API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
dirs = "6"
url = "2"
urlencoding = "2"
md5 = "0.7"
rand = "0.8"
unicode-width = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Async channels
futures = "0.3"

# Terminal emulator for cava integration
vt100 = "0.15"

# Audio output - direct hardware access with better streaming support
cpal = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true

# ----- Unix-only dependencies -----
[target.'cfg(unix)'.dependencies]
# D-Bus / MPRIS (Linux/macOS via D-Bus)
zbus = "5"
mpris-server = "0.8"
# Unix system calls (openpty, fcntl, etc.)
libc = "0.2"

# ----- Windows-only dependencies -----
[target.'cfg(windows)'.dependencies]
# Named pipe + Win32 API access for MPV IPC
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
] }

[dev-dependencies]
tempfile = "3.24.0"

[package.metadata.deb]
assets = [
    ["target/release/ferrosonic", "usr/bin/ferrosonic", "755"],
    ["packaging/debian/ferrosonic.desktop", "usr/share/applications/ferrosonic.desktop", "644"],
    ["icons/ferrosonic.png", "usr/share/icons/hicolor/256x256/apps/ferrosonic.png", "644"],
]
