[package]
name = "ferrosonic"
version = "0.2.5"
edition = "2021"
description = "A terminal-based Subsonic music client with bit-perfect audio playback"
license = "MIT"
authors = ["ferrosonic contributors"]

[dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["full", "sync", "process", "signal"] }

# Terminal UI
ratatui = "0.30.0"
crossterm = "0.29.0"
tui-tree-widget = "0.24.0"

# HTTP client for Subsonic API
reqwest = { version = "0.13.2", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Utilities
dirs = "6.0.0"
url = "2.5.8"
urlencoding = "2.1.3"
md5 = "0.8.0"
rand = "0.10.0"
unicode-width = "0.2.2"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"

# CLI
clap = { version = "4.6.0", features = ["derive"] }

# Async channels
futures = "0.3.32"

# Terminal emulator for cava integration
vt100 = "0.16.2"

# Desktop notifications (Linux via D-Bus, Windows via WinRT)
notify-rust = "4.12.0"

# Audio output - direct hardware access with better streaming support
cpal = "0.17.3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# ----- Unix-only dependencies -----
[target.'cfg(unix)'.dependencies]
# D-Bus / MPRIS (Linux/macOS via D-Bus)
zbus = "5.14.0"
mpris-server = "0.9.0"
# Unix system calls (openpty, fcntl, etc.)
libc = "0.2.183"

# ----- Windows-only dependencies -----
[target.'cfg(windows)'.dependencies]
# Named pipe + Win32 API access for MPV IPC
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
] }

[dev-dependencies]
tempfile = "3.27.0"

[package.metadata.deb]
assets = [
    ["target/release/ferrosonic", "usr/bin/ferrosonic", "755"],
    ["packaging/debian/ferrosonic.desktop", "usr/share/applications/ferrosonic.desktop", "644"],
    ["icons/ferrosonic.png", "usr/share/icons/hicolor/256x256/apps/ferrosonic.png", "644"],
]
